--- a/src/ProjectReporter/ProjectReporter.Service/Views/Account/RegisterStudent.cshtml
+++ b/src/ProjectReporter/ProjectReporter.Service/Views/Account/RegisterStudent.cshtml
@@ -1,10 +1,7 @@
-﻿@using ProjectReporter.Service.Controllers
-@using ProjectReporter.Modules.UsersService.Api
-@model ProjectReporter.Modules.UsersService.Api.Contracts.StudentRegisterContract
+﻿@model ProjectReporter.Modules.UsersService.Api.Contracts.StudentRegisterContract
 @{
     ViewData["Title"] = "Реєстрація";
 }
-@inject IUsersApi UsersApi;
 @{
     <h1>Реєстрація - Студент</h1>
     <form method="post" asp-controller="Account" asp-action="RegisterStudent">
@@ -16,12 +13,12 @@
         </div>
         <div>
             <label>Пароль</label><br />
-            <input asp-for="Password" />
+            <input asp-for="Password" type="password"/>
             <span asp-validation-for="Password"></span>
         </div>
         <div>
             <label>Підтвердіть пароль</label><br />
-            <input asp-for="PasswordConfirm" />
+            <input asp-for="PasswordConfirm" type="password"/>
             <span asp-validation-for="PasswordConfirm"></span>
         </div>
         <div>
@@ -39,7 +36,12 @@
             <input asp-for="GitLink" />
         </div>
         <div>
+            <label>Факультет</label><br />
             <select id="facultySelect" asp-for="FacultyId" asp-items="ViewBag.Faculties" onchange="getGroups()"></select>
+        </div>
+        <div>
+            <label>Група</label><br />
+            <select id="groupSelect" asp-for="GroupId" asp-items="ViewBag.Groups"></select>
         </div>
         <div>
             <button class="btn-primary" asp-controller="Account" asp-action="Register">Назад</button>
@@ -50,9 +52,23 @@
 @section Scripts
 {
     <script>
-        async function getGroups() {
+        function getGroups() {
             const selectedFaculty = $("#facultySelect").val();
-            console.log(selectedFaculty);
-        }
+            $.ajax({
+                cache: false,
+                url: '@Url.Action("GetGroups", "Account")',
+                type: 'Get',
+                data: { facultyId: selectedFaculty },
+                success: function(result) {
+                    var groups = "";
+                    $(result).each(function () {
+                        groups = groups + '<option value="' + this.id + '">' + this.name + '</option>'
+                    });
+                    var groupSelect = $("#groupSelect");
+                    groupSelect.empty();
+                    groupSelect.append(groups);
+                }
+            });
+        };
     </script>
 }
