--- a/src/ProjectReporter/ProjectReporter.Service/Views/Account/RegisterTeacher.cshtml
+++ b/src/ProjectReporter/ProjectReporter.Service/Views/Account/RegisterTeacher.cshtml
@@ -32,8 +32,40 @@
             <span asp-validation-for="LastName"></span>
         </div>
         <div>
+            <label>Факультет</label><br />
+            <select id="facultySelect" asp-for="FacultyId" asp-items="ViewBag.Faculties" onchange="getDepartments()"></select>
+        </div>
+        <div>
+            <label>Кафедра</label><br />
+            <select id="departmentSelect" asp-for="DepartmentId" asp-items="ViewBag.Departments"></select>
+        </div>
+        <div>
             <button class="btn-primary" asp-controller="Account" asp-action="Register">Назад</button>
             <input type="submit" class="btn-primary" value="Зареєструватись" />
         </div>
     </form>
+}
+
+@section Scripts
+{
+    <script>
+        function getDepartments() {
+            const selectedFaculty = $("#facultySelect").val();
+            $.ajax({
+                cache: false,
+                url: '@Url.Action("GetDepartments", "Account")',
+                type: 'Get',
+                data: { facultyId: selectedFaculty },
+                success: function(result) {
+                    var departments = "";
+                    $(result).each(function () {
+                        departments = departments + '<option value="' + this.id + '">' + this.name + '</option>'
+                    });
+                    var departmentSelect = $("#departmentSelect");
+                    departmentSelect.empty();
+                    departmentSelect.append(departments);
+                }
+            });
+        };
+    </script>
 }
