--- a/src/ProjectReporter/ProjectReporter.Service/Views/Account/RegisterTeacher.cshtml
+++ b/src/ProjectReporter/ProjectReporter.Service/Views/Account/RegisterTeacher.cshtml
@@ -13,12 +13,12 @@
         </div>
         <div>
             <label>Пароль</label><br />
-            <input asp-for="Password" />
+            <input asp-for="Password" type="password" />
             <span asp-validation-for="Password"></span>
         </div>
         <div>
             <label>Підтвердіть пароль</label><br />
-            <input asp-for="PasswordConfirm" />
+            <input asp-for="PasswordConfirm" type="password" />
             <span asp-validation-for="PasswordConfirm"></span>
         </div>
         <div>
