--- a/src/ProjectReporter/ProjectReporter.Service/Views/Groups/Index.cshtml
+++ b/src/ProjectReporter/ProjectReporter.Service/Views/Groups/Index.cshtml
@@ -17,7 +17,7 @@
             display: flex;
             margin: 1.5em;
             width: 13em;
-            height:5em;
+            height: 5em;
             background-color: aliceblue;
         }
 
@@ -34,16 +34,16 @@
 <div class="text-center">
     <h1>Groups</h1>
     <ul class="list-group">
-            @foreach (var i in ViewBag.Groups)
-            {
-        <a asp-controller="Groups" asp-action="Projects">
-            <li class="list-group-item">
-                <div class="text-name">
-                    @i.Name
-                </div>
-            </li>
-        </a>
-            }
-        </ul>
-    
+        @foreach (var i in ViewBag.Groups)
+        {
+            <a asp-action="Projects" asp-route-groupId="@i.Id">
+                <li class="list-group-item">
+                    <div class="text-name">
+                        @i.Name
+                    </div>
+                </li>
+            </a>
+        }
+    </ul>
+
 </div>
