Add validation to registration(teacher, student), login.

--- a/src/ProjectReporter/ProjectReporter.Service/Views/Account/RegisterStudent.cshtml
+++ b/src/ProjectReporter/ProjectReporter.Service/Views/Account/RegisterStudent.cshtml
@@ -9,27 +9,27 @@
         <div>
             <label>Email</label><br />
             <input asp-for="Email" />
-            <span asp-validation-for="Email"></span>
+            <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div>
             <label>Пароль</label><br />
-            <input asp-for="Password" type="password"/>
-            <span asp-validation-for="Password"></span>
+            <input asp-for="Password" type="password" />
+            <span asp-validation-for="Password" class="text-danger"></span>
         </div>
         <div>
             <label>Підтвердіть пароль</label><br />
-            <input asp-for="PasswordConfirm" type="password"/>
-            <span asp-validation-for="PasswordConfirm"></span>
+            <input asp-for="PasswordConfirm" type="password" />
+            <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
         </div>
         <div>
             <label>Ім'я</label><br />
             <input asp-for="FirstName" />
-            <span asp-validation-for="FirstName"></span>
+            <span asp-validation-for="FirstName" class="text-danger"></span>
         </div>
         <div>
             <label>Прізвище</label><br />
             <input asp-for="LastName" />
-            <span asp-validation-for="LastName"></span>
+            <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
         <div>
             <label>Репозиторій</label><br />
