--- a/src/ProjectReporter/ProjectReporter.Service/Views/Account/Login.cshtml
+++ b/src/ProjectReporter/ProjectReporter.Service/Views/Account/Login.cshtml
@@ -9,12 +9,12 @@
         <div>
             <label>Email</label><br />
             <input asp-for="Email" />
-            <span asp-validation-for="Email"></span>
+            <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div>
             <label>Пароль</label><br />
             <input asp-for="Password" type="password" />
-            <span asp-validation-for="Password"></span>
+            <span asp-validation-for="Password" class="text-danger"></span>
         </div>
         <div>
             <input type="checkbox" asp-for="RememberMe" />
