--- a/src/ProjectReporter/ProjectReporter.Service/Views/Groups/Projects.cshtml
+++ b/src/ProjectReporter/ProjectReporter.Service/Views/Groups/Projects.cshtml
@@ -38,7 +38,7 @@
         <a >
             <li class="list-group-item">
                 <div class="text-name">
-                    9
+                   @i.Name
                 </div>
             </li>
         </a>
